# kong

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  ROADMAP.md  lint.sh  pyproject.toml
.github/workflows/: ci.yml
crates/kong-ml/: Cargo.toml
crates/kong-types/: Cargo.toml
kong/: __init__.py  __main__.py  banner.py  config.py  db.py
kong/agent/: analyzer.py  deobfuscator.py  events.py  models.py  prompts.py  queue.py  signatures.py  supervisor.py  triage.py  type_recovery.py
kong_output_liblzma/: liblzma_decompiled.c
tests/: test_agent_analyzer.py  test_agent_prompts.py  test_agent_queue.py  test_agent_supervisor.py  test_agent_triage.py  test_cli.py  test_codex_auth.py  test_codex_client.py  test_config.py  test_db.py  test_deobfuscator.py  test_evals.py  test_export_source.py  test_export_structured.py  test_ghidra_client.py  test_ghidra_environment.py  test_llm_client.py  test_llm_tools.py  test_normalizer.py  test_openai_auth.py  test_openai_client.py  test_probe.py  test_setup_wizard.py  test_symbolic.py  test_synthesis.py  test_tui.py  test_type_recovery.py
tools/xda/: README.md  main.py  plan.md  pyproject.toml
tools/xda/configs/: finetune.yaml  pretrain.yaml
tools/xda/scripts/: Dockerfile.corpus  build_corpus.sh  convert_cumlsec.py  export_all.sh  fetch_debian_pkgs.sh  finetune_all.sh  pretrain_all.sh  train_all.sh
tools/xda/src/: build_dataset.py  dataset.py  export.py  extract_labels.py  finetune.py  model.py  pretrain.py  tokenizer.py
tools/xda/tests/: test_dataset.py  test_extract_labels.py  test_model.py  test_tokenizer.py
(+34 files in other folders)
