[project]
name = "xda-training"
version = "0.1.0"
description = "XDA Training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "pyelftools>=0.30",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]